# rust-tools

./: .gitignore  README.md  flake.nix
omega-app/: Cargo.toml
omega-app/src/: main.rs
omega-app/src/common/: mod.rs  structs.rs
omega-app/src/db/: database.rs
omega-app/src/db/sql/: petShop.sql
omega-app/src/wasm/: mod.rs
