[package]
name = "omega-app"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
dasp = "0.11.0"
env_logger = "0.11.8"
log = "0.4.28"
nalgebra = "0.34.1"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokyo = "1.0.0"
winit = "0.30.12"
fake = { version = "4", features = ["derive"] }
symphonia = "0.5.4"
anyhow = "1.0.100"
wasm-bindgen = "0.2.104"
web-sys = "0.3.81"
console_error_panic_hook = "0.1.7"
clap = "4.5.48"
chrono = "0.4.42"
